--- a/app/views/redaction/news/show.html.haml
+++ b/app/views/redaction/news/show.html.haml
@@ -13,8 +13,7 @@
 = article_for @news do |c|
   - c.title = capture do
     = render partial: 'short'
-  - c.meta  = news_posted_by(@news)
-  - c.image = link_to(image_tag(@news.section.image, alt: @news.section.title), @news.section)
+  - c.meta  = news_initiated_by(@news)
   - c.body  = capture do
     #first_part
       = render partial: 'redaction/paragraphs/paragraph', collection: @news.paragraphs.in_first_part
