redaction/news: update template with new design

--- a/app/assets/stylesheets/parts/notice.scss
+++ b/app/assets/stylesheets/parts/notice.scss
@@ -1,7 +1,7 @@
 /* message à caractère informatif */
 #redaction .alert,
 #redaction .notice {
-  margin-top: 50px;
+  width: 50%;
 }
 .alert {
   text-align: center;
