moderation/news: fix template to keep the one closer to current publication

--- a/app/views/redaction/news/show.html.haml
+++ b/app/views/redaction/news/show.html.haml
@@ -51,7 +51,7 @@
     = render partial: 'short'
   - c.meta  = news_initiated_by(@news)
   - c.body  = capture do
-    #first_part
+    #first_part.draft
       = render partial: 'redaction/paragraphs/paragraph', collection: @news.paragraphs.in_first_part
     #second_part
       = render partial: 'redaction/paragraphs/paragraph', collection: @news.paragraphs.in_second_part
