--- a/app/assets/stylesheets/parts/redaction.scss
+++ b/app/assets/stylesheets/parts/redaction.scss
@@ -14,6 +14,11 @@
       content: inline("feather-icons/dist/icons/scissors.svg");
       position: relative;
       top: 20em;
+      left: -6em;
+    }
+  }
+  #first_part.draft {
+    &::before {
       left: -2em;
     }
   }
@@ -164,6 +169,9 @@ body {
       font-weight: unset;
     }
   }
+  article h1 {
+    margin-right: 30px;
+  }
   .score,
   .datePourCss {
     right: 0;
@@ -234,7 +242,7 @@ body {
     background: transparent;
     border: unset;
     width: 19%;
-    h2, summary {
+    h1, h2, summary {
       font-size:1.5em;
       font-weight: unset;
       line-height:1.3em;
