chat_n_edit layout: avoid to use common sidebar id and change chat for redaction_infos

--- a/app/assets/stylesheets/parts/content.scss
+++ b/app/assets/stylesheets/parts/content.scss
@@ -13,8 +13,7 @@ body#news-revision #contents,
 body#boards-show #contents,
 body#stylesheets-edit #contents,
 body#wiki_pages-changes #contents,
-body#admin-index #container > ul,
-#redaction #chat {
+body#admin-index #container > ul {
   display: block;
   background: white;
   padding: 10px $PX_PAD_NODE 10px $PX_PAD_NODE;
