--- a/app/assets/stylesheets/parts/redaction.scss
+++ b/app/assets/stylesheets/parts/redaction.scss
@@ -228,15 +228,12 @@ body {
       }
     }
   }
-  #chat {
-    padding-left: 3px;
-    padding-right: 3px;
-    width: 19%;
+  #redaction-infos {
     .inbox p {
       margin: 2px 0;
     }
   }
-  #sidebar, #chat{
+  #redaction-aside, #redaction-infos{
     padding-left: 3px;
     padding-right: 3px;
     background: transparent;
