--- a/app/views/redaction/news/show.html.haml
+++ b/app/views/redaction/news/show.html.haml
@@ -1,6 +1,6 @@
 - title @news.title
 
-- content_for :sidebar do
+- content_for :aside do
   #second_part_toc
     = @news.second_part_toc
 
@@ -32,9 +32,9 @@
     - if current_account.amr? || current_account.editor? || @news.submitted_by?(current_account)
       = button_to "Soumettre", submit_redaction_news_path(@news), class: "submit_news", data: { confirm: "Une fois la dépêche soumise en modération, vous ne pourrez plus la modifier avant sa publication. Êtes-vous sûr ?" }
 
-- content_for :chat do
   #redaction_board
     %p
+- content_for :infos do
     - if @news.urgent?
       %h1.urgent Dépêche urgente !
     = render 'editions', news: @news
