--- a/app/assets/stylesheets/parts/redaction.scss
+++ b/app/assets/stylesheets/parts/redaction.scss
@@ -240,7 +240,7 @@ body {
     border: unset;
     width: 19%;
     font-size: 0.8em;
-    >h1 {
+    >h1, #news_vote h1 {
       font-size:1.5em;
       line-height:1.3em;
       font-weight: unset;
@@ -254,6 +254,31 @@ body {
     }
     ul {
       padding-left:2em;
+    }
+    details {
+      margin: 1em 0;
+    }
+    summary {
+      font-size: 1.2em;
+      font-weight: bold;
+    }
+    .attendee {
+      display: inline-block;
+      position: relative;
+      width: 48px;
+      height: 48px;
+      margin: 6px;
+      img {
+        max-height: 100%;
+      }
+      form {
+        position: absolute;
+        bottom: 0;
+        right: 0;
+        input {
+          margin: 0;
+        }
+      }
     }
   }
 }
