body background: remove background only for chat_n_edit layout

--- a/app/views/layouts/chat_n_edit.html.haml
+++ b/app/views/layouts/chat_n_edit.html.haml
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 %html(lang="fr")
   = render 'layouts/head'
-  %body{body_attr}
+  %body{body_attr, "style" => "background: #f9f9f9;"}
     #top
     = render 'layouts/site', home: true
     %section#redaction.container
