--- a/app/views/redaction/news/show.html.haml
+++ b/app/views/redaction/news/show.html.haml
@@ -49,6 +49,8 @@
   - c.body  = capture do
     #first_part.draft
       = render partial: 'redaction/paragraphs/paragraph', collection: @news.paragraphs.in_first_part
+    #figure
+      = render partial: 'redaction/news/figure', locals: { news: @news }
     #second_part
       = render partial: 'redaction/paragraphs/paragraph', collection: @news.paragraphs.in_second_part
     .new_paragraph
