--- a/app/views/redaction/news/_figure.html.haml
+++ b/app/views/redaction/news/_figure.html.haml
@@ -1,14 +1,13 @@
 .edition_in_place{"data-url" => edit_figure_redaction_news_path(news)}
-  %figure
-    %img{src: news.figure_image.url, alt: "#{news.figure_alternative}"}
-    %figcaption #{news.figure_caption}
+  - if local_assigns.has_key?(:error)
+    %p %strong = error
   - if news.figure_image?
-    .action
-      %button.edit Modifier
+    %figure
+      %img{src: news.figure_image.url, alt: "#{news.figure_alternative}"}
+      %figcaption #{news.figure_caption}
+    %button.edit Modifier
   - else
-    %p
-      Une belle illustration donnera plus envie de lire votre dépêche.<br/>
-      LinuxFr donne plus de visibilité aux dépêches illustrées par une image
-      haute définition.
-    .action
+    .add-image
+      %p Une belle illustration donnera plus envie de lire votre dépêche.
+      %p LinuxFr donne plus de visibilité aux dépêches illustrées par une image haute définition.
       %button.edit Insérer une image
