--- a/app/views/layouts/chat_n_edit.html.haml
+++ b/app/views/layouts/chat_n_edit.html.haml
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 %html(lang="fr")
   = render 'layouts/head'
-  %body{body_attr, "style" => "background: #f9f9f9;"}
+  %body{body_attr, "class" => "chat_n_edit"}
     #top
     = render 'layouts/site', home: true
     %section#redaction.container
