--- a/app/views/redaction/news/_figure.html.haml
+++ b/app/views/redaction/news/_figure.html.haml
@@ -1,13 +1,14 @@
-.edition_in_place{"data-url" => edit_figure_redaction_news_path(news)}
+.edition_in_place{"data-url" => edit_figure_redaction_news_path(news), "data-edit-element" => "button.edit"}
   - if local_assigns.has_key?(:error)
     %p %strong = error
   - if news.figure_image?
     %figure
       %img{src: news.figure_image.url, alt: "#{news.figure_alternative}"}
       %figcaption #{news.figure_caption}
-    %button.edit Modifier
+    = button_to "Effacer l'image", delete_figure_redaction_news_path(@news), class: "delete_button", data: { confirm: "Effacer cette image utilisée par erreur ?" }
+    %button.edit Modifier l'image
   - else
     .add-image
       %p Une belle illustration donnera plus envie de lire votre dépêche.
       %p LinuxFr donne plus de visibilité aux dépêches illustrées par une image haute définition.
-      %button.edit Insérer une image
+      %button.edit{class: "add_news_figure"} Insérer une image
